adds a ressource to set a new rating value for a book - rating values are set automatically to a valid value (rang 1..5) if they are out of range:   - no rating: average value -> 3   - value < 1 -> set value to 1   - value > 1 -> set value to 5
@gregonnet @johanneshoppe @fmalcher
