# server.js
@@ -24,6 +24,7 @@ server.get(/^(?!\/(book|info)).*/, restify.serveStatic({
 server.get('/books', bookStoreController.getAll);
 server.del('/books', bookStoreController.reset);
 server.post('/book', bookStoreController.create);
+server.post('/book/:isbn/rate', bookStoreController.rate);
 server.get('/book/:isbn', bookStoreController.getByISBN);
 server.get('/book/:isbn/check', bookStoreController.checkISBN);
 server.put('/book/:isbn', bookStoreController.update);
